--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
     - PATH=$PATH:${HOME}/google-cloud-sdk/bin CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
-  - docker build -t MukulMaheshwari/yaydoc .
+  - docker build MukulMaheshwari/yaydoc .
   - docker run -d -p 127.0.0.1:80:4567 MukulMaheshwari/yaydoc /bin/sh -c "cd /root/yaydoc; bundle exec foreman start;"
   - docker ps -a
   - docker run MukulMaheshwari/yaydoc /bin/sh -c "cd /root/yaydoc; bundle exec rake test"
